[package]
name = "openworkers-runtime-v8"
version = "0.8.4"
edition = "2024"
license = "MIT"

[dependencies]

# Common types
# openworkers-core = { path = "../openworkers-core" }
openworkers-core = { git = "https://github.com/openworkers/openworkers-core", tag = "v0.8.1" }

# V8 JavaScript engine (v8 is the new name for rusty_v8)
v8 = "142.2.0"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3"

# Logging
log = "0.4.29"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types
bytes = { version = "1.11", features = ["serde"] }

# Crypto
ring = "0.17"
uuid = { version = "1", features = ["v4"] }

# CPU time measurement (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2.179"

# Signal handling (for CPU time enforcement on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
signal-hook = "0.4.1"
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }

tokio-stream = "0.1"

[dev-dependencies]
ntest = "0.9.5"
