[workspace]
members = ["gc-derive"]

[package]
name = "openworkers-runtime-v8"
version = "0.13.1"
edition = "2024"
license = "MIT"

[features]
default = []
ptrcomp = ["v8/v8_enable_pointer_compression"]
sandbox = ["v8/v8_enable_sandbox", "serde_v8/v8_enable_sandbox"]

[dependencies]

# GC derive macro (internal)
gc-derive = { package = "openworkers-runtime-v8-gc-derive", path = "gc-derive" }

# Common types
openworkers-core = { git = "https://github.com/openworkers/openworkers-core", tag = "v0.13.0" }

# V8 JavaScript engine (fork with UnenteredIsolate + Locker support for pooling)
v8 = { package = "openworkers-v8", version = "145" }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3"

# Logging & Tracing
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# V8 serialization (for automatic Rust <-> JS type conversion)
serde_v8 = { package = "openworkers-serde-v8", version = "145" }

# V8 Glue - binding macros
glue_v8 = { package = "openworkers-glue-v8", version = "145" }

# HTTP types
bytes = { version = "1.11", features = ["serde"] }

# Crypto
ring = "0.17"
uuid = { version = "1", features = ["v4"] }

# LRU cache for isolate pool
lru = "0.16.3"

# CPU time measurement (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

# Signal handling (for CPU time enforcement on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
signal-hook = "0.4.1"
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }

tokio-stream = "0.1"

[dev-dependencies]
ntest = "0.9.5"
criterion = { version = "0.8", features = ["async_tokio"] }
rand = "0.9"

[[bench]]
name = "isolate_pool_bench"
harness = false
